Added jsonrpc dependency
Change-Id: Ic63dc6982642a0bc229ca1204ce78c80b750b4ab

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,11 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
+				<groupId>com.kurento.kmf</groupId>
+				<artifactId>kmf-jsonrpc-api</artifactId>
+				<version>${kmf-jsonrpcconnector.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.commons</groupId>
 				<artifactId>commons-pool2</artifactId>
 				<version>${commons-pool.version}</version>
