--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,7 @@
 		<version.release.plugin>2.4.1</version.release.plugin>
 		<version.resources.plugin>2.6</version.resources.plugin>
 		<version.site.plugin>3.3</version.site.plugin>
+		<version.shell.plugin>1.0-beta-1</version.shell.plugin>
 		<version.shade.plugin>2.2</version.shade.plugin>
 		<version.sonar.plugin>2.0</version.sonar.plugin>
 		<version.source.plugin>2.2.1</version.source.plugin>
@@ -318,9 +319,7 @@
 		</dependencies>
 	</dependencyManagement>
 
-
 	<build>
-
 		<pluginManagement>
 			<!-- All plugins ordered by shortname (antrun, assembly ...) -->
 			<plugins>
@@ -569,6 +568,27 @@
 					<artifactId>maven-site-plugin</artifactId>
 					<version>${version.site.plugin}</version>
 				</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>shell-maven-plugin</artifactId>
+				<version>${version.shell.plugin}</version>
+				<executions>
+					<execution>
+						<id>stage-sources</id>
+						<phase>process-sources</phase>
+						<goals><goal>shell</goal></goals>
+						<configuration>
+							<workDir>${workDir}</workDir>
+							<chmod>true</chmod>
+							<keepScriptFile>true</keepScriptFile>
+							<script>
+								npm install
+								${basedir}/node_modules/.bin/grunt maven
+							</script>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
