--- a/pom.xml
+++ b/pom.xml
@@ -88,7 +88,8 @@
 		<cglib.version>2.2.2</cglib.version>
 		<spring.version>4.0.0.RELEASE</spring.version>
 		<commons-pool.version>2.1</commons-pool.version>
-		<httpclient.version>4.2.5</httpclient.version>
+		<httpclient.version>4.3.2</httpclient.version>
+		<httpcore.version>4.3.2</httpcore.version>
 		<spring-data.version>1.3.2.RELEASE</spring-data.version>
 		<fileupload.version>1.3</fileupload.version>
 		<io.version>2.4</io.version>
@@ -250,6 +251,11 @@
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpclient</artifactId>
 				<version>${httpclient.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents</groupId>
+				<artifactId>httpcore</artifactId>
+				<version>${httpcore.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
