[maven-release-plugin] prepare for next development iteration
Change-Id: I6e2d1248a38baca6b08852b9ed866c595f809e1b

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>3.0.6</version>
+		<version>3.0.7-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -37,9 +37,4 @@
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
 	</dependencies>
-
-
-  <scm>
-    <tag>kmf-spring-3.0.6</tag>
-  </scm>
 </project>
