--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>3.0.6-SNAPSHOT</version>
+		<version>3.0.6</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -38,4 +38,8 @@
 		</dependency>
 	</dependencies>
 
+
+  <scm>
+    <tag>kmf-spring-3.0.6</tag>
+  </scm>
 </project>
