--- a/pom.xml
+++ b/pom.xml
@@ -86,19 +86,21 @@
 		<junit.version>4.11</junit.version>
 		<slf4j.version>1.7.5</slf4j.version>
 		<cglib.version>2.2.2</cglib.version>
-		<spring.version>4.0.0.RELEASE</spring.version>
 		<commons-pool.version>2.1</commons-pool.version>
 		<httpclient.version>4.3.2</httpclient.version>
 		<httpcore.version>4.3.2</httpcore.version>
-		<spring-data.version>1.3.2.RELEASE</spring-data.version>
 		<fileupload.version>1.3</fileupload.version>
 		<io.version>2.4</io.version>
 		<cors-filter.version>1.7.1</cors-filter.version>
 		<project.youtube.version>v3-rev73-1.13.2-beta</project.youtube.version>
 		<project.http.version>1.13.1-beta</project.http.version>
 		<project.oauth.version>1.13.1-beta</project.oauth.version>
+		<spring-data.version>1.3.2.RELEASE</spring-data.version>
 		<spring-boot-starter-web.version>1.0.0.RC3</spring-boot-starter-web.version>
-		<spring-websocket.version>4.0.0.RELEASE</spring-websocket.version>
+		<spring.version>4.0.1.RELEASE</spring.version>
+		<spring-websocket.version>4.0.1.RELEASE</spring-websocket.version>
+		<spring-security.version>3.2.0.RELEASE</spring-security.version>
+		<spring-oauth2.version>1.0.5.RELEASE</spring-oauth2.version>
 		<fluent-hc.version>4.3.2</fluent-hc.version>
 		<commons-lang.version>2.6</commons-lang.version>
 
@@ -228,6 +230,31 @@
 				<version>${slf4j.version}</version>
 				<scope>test</scope>
 			</dependency>
+			<!-- Spring -->
+			<!-- Added to fix dependenciesfrom different Spring versions in Spring 
+				Security -->
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-framework-bom</artifactId>
+				<version>${spring.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-mongodb</artifactId>
+				<version>${spring-data.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-web</artifactId>
+				<version>${spring-boot-starter-web.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-websocket</artifactId>
+				<version>${spring-websocket.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-context-support</artifactId>
@@ -243,6 +270,28 @@
 				<artifactId>spring-web</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
+			<!-- Spring Security -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-core</artifactId>
+				<version>${spring-security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring-security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring-security.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.security.oauth</groupId>
+				<artifactId>spring-security-oauth2</artifactId>
+				<version>${spring-oauth2.version}</version>
+			</dependency>
+
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
@@ -262,11 +311,6 @@
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>httpmime</artifactId>
 				<version>${httpclient.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.data</groupId>
-				<artifactId>spring-data-mongodb</artifactId>
-				<version>${spring-data.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-fileupload</groupId>
@@ -302,16 +346,6 @@
 				<groupId>com.google.oauth-client</groupId>
 				<artifactId>google-oauth-client-jetty</artifactId>
 				<version>${project.oauth.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-web</artifactId>
-				<version>${spring-boot-starter-web.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.springframework</groupId>
-				<artifactId>spring-websocket</artifactId>
-				<version>${spring-websocket.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.thrift</groupId>
