--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "rpc-builder",
-  "version": "0.0.5-3",
+  "version": "0.0.6",
   "description": "Transport and format agnostic RPC library for browser and Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "nodeunit test.js"
   },
   "repository": {
     "type": "git",
@@ -15,10 +15,15 @@
     "JsonRPC",
     "XML-RPC",
     "HTTP",
-    "WebSocket"
+    "WebSocket",
+    "Kurento"
   ],
-  "author": "Jesús Leganés Combarro \"piranna\" <piranna@gmail.com>",
+  "author": "Kurento <info@kurento.org> (http://www.kurento.org/)",
+  "contributors": [
+    "Jesús Leganés Combarro \"piranna\" <piranna@gmail.com>"
+  ],
   "license": "LGPL",
-  "gitHead": "91061b5530030f28a440cb26ba3d44dbfa0240dc",
-  "readmeFilename": "README.md"
+  "devDependencies": {
+    "nodeunit": "~0.8.6"
+  }
 }
