--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
 
 		<libthrift.version>0.9.0</libthrift.version>
 		<gson.version>2.2.4</gson.version>
+		<guava.version>16.0</guava.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<reflections.version>0.9.9-RC1</reflections.version>
 		<commons-pool.version>2.0</commons-pool.version>
@@ -351,6 +352,11 @@
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
 				<version>${gson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
