--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
 		<spring-oauth2.version>1.0.5.RELEASE</spring-oauth2.version>
 		<fluent-hc.version>4.3.2</fluent-hc.version>
 		<commons-lang.version>2.6</commons-lang.version>
+		<scribe.version>1.3.5</scribe.version>
 
 		<!-- **************** -->
 		<!-- Plugins versions -->
@@ -195,6 +196,21 @@
 		<dependencies>
 			<dependency>
 				<groupId>com.kurento.kmf</groupId>
+				<artifactId>kmf-content-protocol</artifactId>
+				<version>${kmf-content-protocol.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.kurento.kmf</groupId>
+				<artifactId>kmf-repository-api</artifactId>
+				<version>${kmf-repository-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.kurento.kws</groupId>
+				<artifactId>kws-content-api</artifactId>
+				<version>${kws-content-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.kurento.kmf</groupId>
 				<artifactId>kmf-thrift-interface</artifactId>
 				<version>${kmf-thrift-interface.version}</version>
 			</dependency>
@@ -232,21 +248,6 @@
 				<groupId>com.kurento.kmf</groupId>
 				<artifactId>kmf-spring</artifactId>
 				<version>${kmf-spring.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.kurento.kmf</groupId>
-				<artifactId>kmf-content-protocol</artifactId>
-				<version>${kmf-content-protocol.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.kurento.kmf</groupId>
-				<artifactId>kmf-repository-api</artifactId>
-				<version>${kmf-repository-api.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>com.kurento.kws</groupId>
-				<artifactId>kws-content-api</artifactId>
-				<version>${kws-content-api.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -348,6 +349,12 @@
 				<version>${spring-oauth2.version}</version>
 			</dependency>
 
+
+			<dependency>
+				<groupId>org.scribe</groupId>
+				<artifactId>scribe</artifactId>
+				<version>${scribe.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
