Added OAuth authentication filter and license headers
Change-Id: Iea9618116a4ded7206ad639a7cbb8b4ee34e91bf

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
 			<artifactId>fluent-hc</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.scribe</groupId>
+			<artifactId>scribe</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
