--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,13 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
-			<artifactId>kmf-jsonrpc-api</artifactId>
+			<artifactId>kmf-jsonrpcconnector</artifactId>
 			<version>${kmf-jsonrpcconnector.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.kurento.kmf</groupId>
-			<artifactId>kmf-media-api</artifactId>
-			<version>${kmf-media-api.version}</version>
+			<artifactId>kmf-thrift-interface</artifactId>
+			<version>${kmf-thrift-interface.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
