--- a/debian/control
+++ b/debian/control
@@ -1,4 +1,4 @@
-Source: kms-interface-idl
+Source: ktool-room-processor
 Section: devel
 Priority: optional
 Maintainer: Kurento Maintenance Team <kurento@googlegroups.com>
@@ -7,7 +7,7 @@ Build-Depends: debhelper(>=9), openjdk-7-jdk | openjdk-6-jdk | java-compiler, li
 Standards-Version: 3.9.4
 
 
-Package: kms-interface-idl
+Package: ktool-room-processor
 Architecture: all
 Depends: default-jre (>= 6) | default-jre-headless (>= 6) | java6-runtime | java6-runtime-headless,
  libfreemarker-java, libgoogle-gson-java, libslf4j-java, libcommons-cli-java, ${misc:Depends}
