Rename package from kms.idl to ktool.rom.processor
Change-Id: Ibbbc45ed325a8507da34afc627670b5a39c49d2c

--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
 					</descriptorRefs>
 					<archive>
 						<manifestEntries>
-							<Main-Class>com.kurento.kms.idl.codegen.Main</Main-Class>
+							<Main-Class>com.kurento.ktool.rom.processor.codegen.Main</Main-Class>
 						</manifestEntries>
 					</archive>
 				</configuration>
