Changed rpc-builder reference
Change-Id: I1c56580603738e9dde5cc603890d8bd42b614298

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "dependencies": {
     "async": "~0.2.9",
-    "rpc-builder": "~0.0.3",
+    "kws-rpc-builder": "~3.0.7",
     "ws": "~0.4.31",
     "xmlhttprequest": "piranna/node-XMLHttpRequest"
   },
