KmsHttpLoop: Add internal loop class
Change-Id: Icb2ac521e9f300175f15e1db83cc368e92b5c5fd

--- a/httpepserver/CMakeLists.txt
+++ b/httpepserver/CMakeLists.txt
@@ -20,11 +20,13 @@ find_package(LibSoup REQUIRED)
 SET(HTTP_EP_SOURCES
   KmsHttpEPServer.cpp
   KmsHttpPost.cpp
+  KmsHttpLoop.cpp
 )
 
 SET(HTTP_EP_HEADERS
   KmsHttpEPServer.h
   KmsHttpPost.h
+  KmsHttpLoop.h
 )
 
 set(ENUM_HEADERS
