[release] Prepare release 4.0.0
Change-Id: I3fb0543022b53205b24a00401104099df8f9886f

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>3.0.7-SNAPSHOT</version>
+		<version>4.0.0</version>
 	</parent>
 	
 	<groupId>com.kurento.kmf</groupId>
@@ -30,4 +30,4 @@
 		</dependency>
 	</dependencies>
 
-</project>
+<scm><tag>kmf-content-protocol-4.0.0</tag></scm></project>
