[release] Prepare for next development iteration
Change-Id: Ife6187943e1d3cee59f2cbe75717824aa3f3b048

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.0.0</version>
+		<version>4.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -57,4 +57,4 @@
 		</dependency>
 	</dependencies>
 
-<scm><tag>kmf-repository-api-4.0.0</tag></scm></project>
+</project>
