--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.0.0</version>
+		<version>4.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -89,4 +89,4 @@
 			</snapshots>
 		</repository>
 	</repositories>
-<scm><tag>kmf-jsonrpcconnector-4.0.0</tag></scm></project>
+</project>
