[release] Prepare for next development iteration
Change-Id: Ib2cfe2129f535652703da4351119087288c993cc

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.0.0</version>
+		<version>4.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -40,4 +40,4 @@
 		</repository>
 	</repositories>
 
-<scm><tag>kmf-repository-api-test-4.0.0</tag></scm></project>
+</project>
