[release] Prepare for next development iteration
Change-Id: Ia059a049e15126b48a0d5102ca268faa3bc5a562

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kws-rpc-builder",
-  "version": "4.0.0",
+  "version": "4.0.1-SNAPSHOT",
   "description": "RPC library for browser and Node.js",
   "main": "index.js",
   "scripts": {
