[release] Prepare for next development iteration
Change-Id: I83513cc64796d28a7a453cc88e9e5e31c40f2ff3

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.kurento</groupId>
 		<artifactId>kmf-parent-pom</artifactId>
-		<version>4.0.0</version>
+		<version>4.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.kurento.kmf</groupId>
@@ -132,4 +132,4 @@
 		</pluginRepository>
 	</pluginRepositories>
 
-<scm><tag>kmf-media-connector-test-4.0.0</tag></scm></project>
+</project>
