--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,38 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-jsonrpcconnector</artifactId>
+	<version>${project.parent.version}</version>
+	<packaging>jar</packaging>
 
 	<name>Kurento Media Framework - JSON-RPC Protocol</name>
 	<description>
 			JSON-RPC Protocol with transports based on http and websocket
 	</description>
-	<url>https://github.com/Kurento/kmf-content-protocol</url>
-	<packaging>jar</packaging>
+	<url>http://www.kurento.com/docs/${project.version}</url>
+
+	<licenses>
+		<license>
+			<name>GNU Lesser General Public License</name>
+			<url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<scm>
+		<url>https://github.com/Kurento/${project.artifactId}</url>
+		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
+		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
+		<tag>develop</tag>
+	</scm>
+
+	<developers>
+		<developer>
+			<id>kurento.org</id>
+			<name>-kurento.org Community</name>
+			<organization>Kurento.org</organization>
+			<organizationUrl>http://www.kurento.org</organizationUrl>
+		</developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
