--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-spring</artifactId>
-	<version>${project.parent.version}</version>
+	<version>4.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>Kurento Media Framework - Spring Utils</name>
@@ -32,7 +32,7 @@
 		<url>https://github.com/Kurento/${project.artifactId}</url>
 		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>kmf-spring-4.1.0</tag>
+		<tag>develop</tag>
 	</scm>
 
 	<developers>
