--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	</parent>
 	<groupId>com.kurento.kmf</groupId>
 	<artifactId>kmf-thrift-interface</artifactId>
-	<version>${project.parent.version}</version>
+	<version>4.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>kmf-thrift-interface</name>
 	<description>
@@ -29,7 +29,7 @@
 		<url>https://github.com/Kurento/${project.artifactId}</url>
 		<connection>scm:git:https://github.com/Kurento/${project.artifactId}.git</connection>
 		<developerConnection>scm:git:ssh://git@github.com:Kurento/${project.artifactId}.git</developerConnection>
-		<tag>kmf-thrift-interface-4.1.0</tag>
+		<tag>develop</tag>
 	</scm>
 
 	<developers>
