--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "KwsMedia",
-  "version": "4.0.1-SNAPSHOT",
+  "version": "4.1.0",
   "description": "Media API for the Kurento Web SDK",
   "homepage": "http://www.kurento.com",
   "license": "LGPL",
